k8s/services/stalwart/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stalwart
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: stalwart
          image: ghcr.io/stalwartlabs/mail-server
          command:
            - /usr/local/bin/stalwart-mail
            - --config
            - /config/config.toml
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
            - name: imap
              containerPort: 143
              protocol: TCP
            - name: imaptls
              containerPort: 993
              protocol: TCP
            - name: sieve
              containerPort: 4190
              protocol: TCP
            - name: smtp
              containerPort: 25
              protocol: TCP
            - name: submission
              containerPort: 587
              protocol: TCP
            - name: submissions
              containerPort: 465
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /opt/stalwart-mail
            - name: config
              mountPath: /config
            - name: secrets
              mountPath: /secrets
            - name: postgres-creds
              mountPath: /postgres-creds
            - name: ldap-creds
              mountPath: /ldap-creds
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: stalwart-data
        - name: config
          configMap:
            name: stalwart-config
        - name: secrets
          secret:
            secretName: stalwart-secrets
        - name: postgres-creds
          secret:
            secretName: stalwart-postgres-credentials
        - name: ldap-creds
          secret:
            secretName: stalwart-ldap-credentials
