k8s/services/stalwart/app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: stalwart
  annotations:
    io.cilium/lb-ipam-ips: 148.251.148.234
    external-dns.alpha.kubernetes.io/hostname: mail.lama-corp.space
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
    - name: imap
      port: 143
      protocol: TCP
      targetPort: 143
    - name: imaptls
      port: 993
      protocol: TCP
      targetPort: 993
    - name: sieve
      port: 4190
      protocol: TCP
      targetPort: 4190
    - name: smtp
      port: 25
      protocol: TCP
      targetPort: 25
    - name: submission
      port: 587
      protocol: TCP
      targetPort: 587
    - name: submissions
      port: 465
      protocol: TCP
      targetPort: 465
