k8s/services/stalwart/app/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-world
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-stalwart
spec:
  endpointSelector: {}
  ingress:
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "143"
              protocol: TCP
            - port: "993"
              protocol: TCP
            - port: "4190"
              protocol: TCP
            - port: "25"
              protocol: TCP
            - port: "587"
              protocol: TCP
            - port: "465"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-authentik-ldap
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: services-authentik
            goauthentik.io/outpost-name: ldap-outpost
